--- a/index.html
+++ b/index.html
@@ -37,6 +37,28 @@
 			</div>
 		</div>
 	</header>
+	<!-- MAIN -->
+
+	<main>
+		<div class="container">
+			<div class="main-content">
+				<div>
+					<div class="main-content__about">Restauran</div>
+					<h1>Italian <br />Cuisine</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sodales senectus dictum arcu sit tristique donec
+						eget.</p>
+					<div class="main-content__buttons">
+						<a href="#">Order now</a>
+						<a href="#">Reservation</a>
+					</div>
+				</div>
+				<div>
+					<img src="assets/images/Illustration.png" alt="Pasta">
+				</div>
+			</div>
+		</div>
+
+	</main>
 
 </body>
 
