feat: The welcome block was created

--- a/index.html
+++ b/index.html
@@ -37,26 +37,46 @@
 			</div>
 		</div>
 	</header>
-	<!-- MAIN -->
 
 	<main>
-		<div class="container">
-			<div class="main-content">
-				<div>
-					<div class="main-content__about">Restauran</div>
-					<h1>Italian <br />Cuisine</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sodales senectus dictum arcu sit tristique donec
-						eget.</p>
-					<div class="main-content__buttons">
-						<a href="#">Order now</a>
-						<a href="#">Reservation</a>
+		<!-- MAIN -->
+		<section class="main">
+			<div class="container">
+				<div class="main-content">
+					<div>
+						<div class="main-content__about">Restauran</div>
+						<h1>Italian <br />Cuisine</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sodales senectus dictum arcu sit tristique donec
+							eget.</p>
+						<div class="main-content__buttons">
+							<a href="#">Order now</a>
+							<a href="#">Reservation</a>
+						</div>
+					</div>
+					<div>
+						<img src="assets/images/Illustration.png" alt="Pasta">
 					</div>
 				</div>
-				<div>
-					<img src="assets/images/Illustration.png" alt="Pasta">
+			</div>
+		</section>
+
+		<!-- WELCOME -->
+		<section class="welcome">
+			<div class="container">
+				<div class="welcome-content">
+					<img src="assets/images/Welcome.png" alt="Salad">
+					<div>
+						<h2>Welcome to <span>delizioso</span></h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis ultricies at eleifend proin. Congue
+							nibh nulla malesuada ultricies nec quam </p>
+						<a href="#">See our menu</a>
+					</div>
+
 				</div>
 			</div>
-		</div>
+
+		</section>
+
 
 	</main>
 
