feat: we have set up a section with product cards

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 	<!-- HEADER -->
+
 	<header>
 		<div class="container">
 			<div class="header-content">
@@ -40,6 +41,7 @@
 
 	<main>
 		<!-- MAIN -->
+
 		<section class="main">
 			<div class="container">
 				<div class="main-content">
@@ -61,6 +63,7 @@
 		</section>
 
 		<!-- WELCOME -->
+
 		<section class="welcome">
 			<div class="container">
 				<div class="welcome-content">
@@ -74,8 +77,152 @@
 
 				</div>
 			</div>
-
 		</section>
+
+		<!-- MENU -->
+
+		<section class="menu">
+			<div class="container">
+				<h2>Our popular menu</h2>
+
+				<div class="menu-buttons">
+					<a href="#">All catagory</a>
+					<a href="#">Dinner</a>
+					<a href="#">Lunch</a>
+					<a href="#">Dessert</a>
+					<a href="#">Drink</a>
+				</div>
+
+				<div class="menu-items">
+					<div class="menu-item">
+						<img src="assets/images/menu/Mask Grou1.png" alt="Product">
+						<h3>Spaghetti</h3>
+						<div class="menu-item__rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star-empty.svg" alt="Rating">
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora iusto molestias libero quasi at nemo
+							delectus sed expedita. Impedit neque laudantium dicta esse a laborum pariatur nostrum! Autem, debitis
+							rerum!</p>
+						<div class="menu-item__last">
+							<h4 class="menu-item__last-price">$12</h4>
+							<a href="#">Order now</a>
+						</div>
+					</div>
+
+					<div class="menu-item">
+						<img src="assets/images/menu/Mask Grou2.png" alt="Product">
+						<h3>Gnocchi</h3>
+						<div class="menu-item__rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star-empty.svg" alt="Rating">
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem perferendis inventore vitae
+							assumenda debitis quia quis, neque nisi magni. Officia totam eos autem. Doloremque ipsa earum neque.
+							Accusamus, odit porro.</p>
+						<div class="menu-item__last">
+							<h4 class="menu-item__last-price">$12</h4>
+							<a href="#">Order now</a>
+						</div>
+					</div>
+
+					<div class="menu-item">
+						<img src="assets/images/menu/Mask Grou3.png" alt="Product">
+						<h3>Rovioli</h3>
+						<div class="menu-item__rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star-empty.svg" alt="Rating">
+						</div>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat aliquam sint, totam perspiciatis harum
+							maxime! Magnam magni, placeat totam quidem dolorem quam debitis? Magnam aliquid amet at, odio tempora
+							recusandae?</p>
+						<div class="menu-item__last">
+							<h4 class="menu-item__last-price">$12</h4>
+							<a href="#">Order now</a>
+						</div>
+					</div>
+
+					<div class="menu-item">
+						<img src="assets/images/menu/Mask Grou4.png" alt="Product">
+						<h3>Penne Alla Vodak</h3>
+						<div class="menu-item__rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star-empty.svg" alt="Rating">
+						</div>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur nesciunt aliquid distinctio architecto
+							sapiente facere, doloribus eum omnis ad, necessitatibus, hic provident. Cumque reiciendis eos veniam quo
+							quis id culpa.</p>
+						<div class="menu-item__last">
+							<h4 class="menu-item__last-price">$12</h4>
+							<a href="#">Order now</a>
+						</div>
+					</div>
+
+					<div class="menu-item">
+						<img src="assets/images/menu/Mask Grou5.png" alt="Product">
+						<h3>Risoto</h3>
+						<div class="menu-item__rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star-empty.svg" alt="Rating">
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus necessitatibus, repellat saepe fugiat fuga
+							in at eaque exercitationem, cupiditate accusantium fugit ipsam deserunt inventore ut quod dolorem sunt
+							officiis hic!</p>
+						<div class="menu-item__last">
+							<h4 class="menu-item__last-price">$12</h4>
+							<a href="#">Order now</a>
+						</div>
+					</div>
+
+					<div class="menu-item">
+						<img src="assets/images/menu/Mask Grou6.png" alt="Product">
+						<h3>Splitza Signature</h3>
+						<div class="menu-item__rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star.svg" alt="Rating">
+							<img src="assets/images/menu/Star-empty.svg" alt="Rating">
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi pariatur quam expedita perferendis qui
+							provident repudiandae sed. Repellendus saepe modi illum consequuntur ipsam optio ex temporibus illo
+							praesentium harum. Laborum.</p>
+						<div class="menu-item__last">
+							<h4 class="menu-item__last-price">$12</h4>
+							<a href="#">Order now</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="menu-pag">
+					<a href="#">
+						&lt; </a>
+					<a href="#">1</a>
+					<a href="#">2</a>
+					<a href="#">3</a>
+					<a href="#">...</a>
+					<a href="#">&gt;</a>
+				</div>
+
+			</div>
+		</section>
+
+
 
 
 	</main>
