feat: the block with the cards was stylized

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<h2>Our popular menu</h2>
 
 				<div class="menu-buttons">
-					<a href="#">All catagory</a>
+					<a href="#" class="checked">All catagory</a>
 					<a href="#">Dinner</a>
 					<a href="#">Lunch</a>
 					<a href="#">Dessert</a>
@@ -203,7 +203,7 @@
 							provident repudiandae sed. Repellendus saepe modi illum consequuntur ipsam optio ex temporibus illo
 							praesentium harum. Laborum.</p>
 						<div class="menu-item__last">
-							<h4 class="menu-item__last-price">$12</h4>
+							<h4 class="menu-item__last-price">$12.05</h4>
 							<a href="#">Order now</a>
 						</div>
 					</div>
