feat: stylized block with pagination

--- a/index.html
+++ b/index.html
@@ -210,13 +210,14 @@
 				</div>
 
 				<div class="menu-pag">
-					<a href="#">
-						&lt; </a>
-					<a href="#">1</a>
-					<a href="#">2</a>
-					<a href="#">3</a>
-					<a href="#">...</a>
-					<a href="#">&gt;</a>
+					<a href="#" class="back pag">
+						<span>&lt;</span>
+					</a>
+					<a href="#" class="page pag"><span>1</span></a>
+					<a href="#" class="page pag"><span>2</span></a>
+					<a href="#" class="page pag"><span>3</span></a>
+					<a href="#" class="dote pag"><span>...</span></a>
+					<a href="#" class="next pag"><span>&gt;</span></a>
 				</div>
 
 			</div>
