feat:implemented the reserve section

--- a/index.html
+++ b/index.html
@@ -219,10 +219,27 @@
 					<a href="#" class="dote pag"><span>...</span></a>
 					<a href="#" class="next pag"><span>&gt;</span></a>
 				</div>
-
 			</div>
 		</section>
 
+		<!-- RESERVE -->
+
+		<div class="reserve">
+			<div class="container">
+				<div class="reserve-content">
+					<div class="reserve-left">
+						<img src="assets/images/Reserve.png" alt="Reserve">
+					</div>
+					<div class="reserve-right">
+						<h2>Let's reserve <br><span>a table</span></h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis ultricies at eleifend proin. Congue
+							nibh
+							nulla malesuada ultricies nec quam </p>
+						<a href="#">Reservation</a>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 
