--- a/index.html
+++ b/index.html
@@ -241,6 +241,34 @@
 			</div>
 		</div>
 
+		<!-- GREATEST -->
+
+		<div class="greatest">
+			<div class="container">
+				<h2>Our greatest chef</h2>
+				<div class="greatest-items">
+					<div class="greatest-item">
+						<img src="assets/images/greatest/Group 8.png" alt="Greatest member">
+						<h3>Betran Komar</h3>
+						<p>Head chef</p>
+					</div>
+					<div class="greatest-item">
+						<img src="assets/images/greatest/Group 9.png" alt="Greatest member">
+						<h3>Ferry Sauwi</h3>
+						<p>Chef</p>
+					</div>
+					<div class="greatest-item">
+						<img src="assets/images/greatest/Group 10.png" alt="Greatest member">
+						<h3>Iswan Dracho</h3>
+						<p>Chef</p>
+					</div>
+				</div>
+				<div class="greatest-button">
+					<a href="#">View all</a>
+				</div>
+			</div>
+		</div>
+
 
 
 	</main>
