feat: the customers block is implemented

--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
 							nibh nulla malesuada ultricies nec quam </p>
 						<a href="#">See our menu</a>
 					</div>
-
 				</div>
 			</div>
 		</section>
@@ -265,6 +264,41 @@
 				</div>
 				<div class="greatest-button">
 					<a href="#">View all</a>
+				</div>
+			</div>
+		</div>
+
+		<!-- CUSTOMERS -->
+		<div class="customers">
+			<div class="circle circle-green"></div>
+			<div class="circle circle-blue"></div>
+			<div class="circle circle-pink"></div>
+			<div class="circle circle-purple"></div>
+			<div class="circle circle-orange circle-orange_big"></div>
+			<div class="circle  circle-orange circle-orange_mini"></div>
+
+
+
+
+
+			<div class="container">
+				<h2>Our customers say</h2>
+				<div class="customers-content">
+					<div class="customer">
+						<img src="assets/images/customers/Customer.png" alt="Customer">
+						<h3>Starla Virgoun</h3>
+						<span>Financial advisor</span>
+					</div>
+					<div class="customers-desc">
+						<span class="forging forging-up">&ldquo;</span>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis ultricies at eleifend proin. Congue nibh
+						nulla malesuada ultricies nec quam
+						<span class="forging forging-buttom">&bdquo;</span>
+
+					</div>
+				</div>
+				<div class="customers__last">
+					<img src="assets/images/customers/Users.png" alt="Users">
 				</div>
 			</div>
 		</div>
