feat: implemented the open section

--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
 		</div>
 
 		<!-- CUSTOMERS -->
+
 		<div class="customers">
 			<div class="circle circle-green"></div>
 			<div class="circle circle-blue"></div>
@@ -276,11 +277,6 @@
 			<div class="circle circle-purple"></div>
 			<div class="circle circle-orange circle-orange_big"></div>
 			<div class="circle  circle-orange circle-orange_mini"></div>
-
-
-
-
-
 			<div class="container">
 				<h2>Our customers say</h2>
 				<div class="customers-content">
@@ -303,6 +299,25 @@
 			</div>
 		</div>
 
+		<!-- OPEN -->
+
+		<div class="open">
+			<div class="container">
+				<div class="open-content">
+					<h2>we are open from</h2>
+					<span>Monday-Sunday</span>
+					<ul class="open-items">
+						<li class="open-item">Launch : Mon-Sun : 11:00am-02:00pm</li>
+						<li class="open-item">Dinner : sunday : 04:00pm-08:00pm</li>
+						<li class="open-item">04:00pm-09:00pm</li>
+					</ul>
+					<div class="open-buttons">
+						<a href="#">Order now</a>
+						<a href="#">Reservation</a>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 	</main>
